// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden frames — every form > bar · ascii-1bit-wide · 40 1`] = `
"── bar · measured 6 · rendered 6
[2malpha |[22m.............................. 10
[2m beta |[22m#######################....... 25
[2mgamma |[22m########...................... 15
[2mdelta |[22m############################## 30
      [2m+---------------------------------[22m
"
`;

exports[`golden frames — every form > bar · ascii-1bit-wide · 80 1`] = `
"── bar · measured 6 · rendered 6
[2malpha |[22m...................................................................... 10
[2m beta |[22m#####################################################................. 25
[2mgamma |[22m##################.................................................... 15
[2mdelta |[22m###################################################################### 30
      [2m+-------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > bar · full · 40 1`] = `
"── bar · measured 6 · rendered 6
[38;2;98;98;98malpha │[38;2;230;159;0m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 10[39m
[38;2;98;98;98m beta │[38;2;230;159;0m███████████████████████░░░░░░░ 25[39m
[38;2;98;98;98mgamma │[38;2;230;159;0m████████░░░░░░░░░░░░░░░░░░░░░░ 15[39m
[38;2;98;98;98mdelta │[38;2;230;159;0m██████████████████████████████ 30[39m
      [38;2;98;98;98m└─────────────────────────────────[39m
"
`;

exports[`golden frames — every form > bar · full · 80 1`] = `
"── bar · measured 6 · rendered 6
[38;2;98;98;98malpha │[38;2;230;159;0m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 10[39m
[38;2;98;98;98m beta │[38;2;230;159;0m█████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░ 25[39m
[38;2;98;98;98mgamma │[38;2;230;159;0m██████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 15[39m
[38;2;98;98;98mdelta │[38;2;230;159;0m██████████████████████████████████████████████████████████████████████ 30[39m
      [38;2;98;98;98m└─────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > boxplot · ascii-1bit-wide · 40 1`] = `
"── boxplot · measured 5 · rendered 5
[2mA |[22m   |------[=====|======]-----|
[2mB |[22m       |-----[======|=====]------|
[2mC |[22m|------[=====|======]-----|         *
  [2m+-------------------------------------[22m
"
`;

exports[`golden frames — every form > boxplot · ascii-1bit-wide · 80 1`] = `
"── boxplot · measured 5 · rendered 5
[2mA |[22m       |-------------[=============|============]-------------|
[2mB |[22m              |-------------[============|=============]-------------|
[2mC |[22m|-------------[=============|============]-------------|                    *
  [2m+-----------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > boxplot · full · 40 1`] = `
"── boxplot · measured 5 · rendered 5
[38;2;98;98;98mA │[38;2;230;159;0m   ├──────[▌▌▌▌▌│▌▌▌▌▌▌]─────┤       [39m
[38;2;98;98;98mB │[38;2;230;159;0m       ├─────[▌▌▌▌▌▌│▌▌▌▌▌]──────┤   [39m
[38;2;98;98;98mC │[38;2;230;159;0m├──────[▌▌▌▌▌│▌▌▌▌▌▌]─────┤         ◌[39m
  [38;2;98;98;98m└─────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > boxplot · full · 80 1`] = `
"── boxplot · measured 5 · rendered 5
[38;2;98;98;98mA │[38;2;230;159;0m       ├─────────────[▌▌▌▌▌▌▌▌▌▌▌▌▌│▌▌▌▌▌▌▌▌▌▌▌▌]─────────────┤              [39m
[38;2;98;98;98mB │[38;2;230;159;0m              ├─────────────[▌▌▌▌▌▌▌▌▌▌▌▌│▌▌▌▌▌▌▌▌▌▌▌▌▌]─────────────┤       [39m
[38;2;98;98;98mC │[38;2;230;159;0m├─────────────[▌▌▌▌▌▌▌▌▌▌▌▌▌│▌▌▌▌▌▌▌▌▌▌▌▌]─────────────┤                    ◌[39m
  [38;2;98;98;98m└─────────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > calendar · ascii-1bit-wide · 40 1`] = `
"── calendar · measured 6 · rendered 6
[2mwk1 |[22m                            :.+=@:.
[2mwk2 |[22m                            =:#.+=:
[2mwk3 |[22m                            .=:+=#.
[2mwk4 |[22m                            ::==++:

[2m.:-=+*#@  0 - 5[22m"
`;

exports[`golden frames — every form > calendar · ascii-1bit-wide · 80 1`] = `
"── calendar · measured 6 · rendered 6
[2mwk1 |[22m                                                                    :.+=@:.
[2mwk2 |[22m                                                                    =:#.+=:
[2mwk3 |[22m                                                                    .=:+=#.
[2mwk4 |[22m                                                                    ::==++:

[2m.:-=+*#@  0 - 5[22m"
`;

exports[`golden frames — every form > calendar · full · 40 1`] = `
"── calendar · measured 6 · rendered 6
[38;2;98;98;98mwk1 │[39m                            ⠔⠄⠷⠶⣿⠔⠄
[38;2;98;98;98mwk2 │[39m                            ⠶⠔⡿⠄⠷⠶⠔
[38;2;98;98;98mwk3 │[39m                            ⠄⠶⠔⠷⠶⡿⠄
[38;2;98;98;98mwk4 │[39m                            ⠔⠔⠶⠶⠷⠷⠔

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  0 - 5[39m"
`;

exports[`golden frames — every form > calendar · full · 80 1`] = `
"── calendar · measured 6 · rendered 6
[38;2;98;98;98mwk1 │[39m                                                                    ⠔⠄⠷⠶⣿⠔⠄
[38;2;98;98;98mwk2 │[39m                                                                    ⠶⠔⡿⠄⠷⠶⠔
[38;2;98;98;98mwk3 │[39m                                                                    ⠄⠶⠔⠷⠶⡿⠄
[38;2;98;98;98mwk4 │[39m                                                                    ⠔⠔⠶⠶⠷⠷⠔

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  0 - 5[39m"
`;

exports[`golden frames — every form > confusion · ascii-1bit-wide · 40 1`] = `
"── confusion · measured 5 · rendered 5
[2m cat |[22m                               @..
[2m dog |[22m                               .#.
[2mbird |[22m                               .:#

[2m.:-=+*#@  5 - 90[22m"
`;

exports[`golden frames — every form > confusion · ascii-1bit-wide · 80 1`] = `
"── confusion · measured 5 · rendered 5
[2m cat |[22m                                                                       @..
[2m dog |[22m                                                                       .#.
[2mbird |[22m                                                                       .:#

[2m.:-=+*#@  5 - 90[22m"
`;

exports[`golden frames — every form > confusion · full · 40 1`] = `
"── confusion · measured 5 · rendered 5
[38;2;98;98;98m cat │[39m                               ⣿⠄⠄
[38;2;98;98;98m dog │[39m                               ⠄⡿⠄
[38;2;98;98;98mbird │[39m                               ⠄⠔⡿

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  5 - 90[39m"
`;

exports[`golden frames — every form > confusion · full · 80 1`] = `
"── confusion · measured 5 · rendered 5
[38;2;98;98;98m cat │[39m                                                                       ⣿⠄⠄
[38;2;98;98;98m dog │[39m                                                                       ⠄⡿⠄
[38;2;98;98;98mbird │[39m                                                                       ⠄⠔⡿

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  5 - 90[39m"
`;

exports[`golden frames — every form > correlation · ascii-1bit-wide · 40 1`] = `
"── correlation · measured 5 · rendered 5
[2mA |[22m                                  @*.
[2mB |[22m                                  *@-
[2mC |[22m                                  .-@

[2m.:-=+*#@  0.3 - 1[22m"
`;

exports[`golden frames — every form > correlation · ascii-1bit-wide · 80 1`] = `
"── correlation · measured 5 · rendered 5
[2mA |[22m                                                                          @*.
[2mB |[22m                                                                          *@-
[2mC |[22m                                                                          .-@

[2m.:-=+*#@  0.3 - 1[22m"
`;

exports[`golden frames — every form > correlation · full · 40 1`] = `
"── correlation · measured 5 · rendered 5
[38;2;98;98;98mA │[39m                                  ⣿⠿⠄
[38;2;98;98;98mB │[39m                                  ⠿⣿⠖
[38;2;98;98;98mC │[39m                                  ⠄⠖⣿

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  0.3 - 1[39m"
`;

exports[`golden frames — every form > correlation · full · 80 1`] = `
"── correlation · measured 5 · rendered 5
[38;2;98;98;98mA │[39m                                                                          ⣿⠿⠄
[38;2;98;98;98mB │[39m                                                                          ⠿⣿⠖
[38;2;98;98;98mC │[39m                                                                          ⠄⠖⣿

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  0.3 - 1[39m"
`;

exports[`golden frames — every form > density · ascii-1bit-wide · 40 1`] = `
"── density · measured 7 · rendered 7
[2m0.14 |[22m    :=*#@@@@@@@@@@@#+=:
[2m     |[22m  =#@                 @#+:
[2m     |[22m+@                        @*-.
[2m     |[22m                             @#+=:
[2m0.00 |[22m
     [2m+----------------------------------[22m
"
`;

exports[`golden frames — every form > density · ascii-1bit-wide · 80 1`] = `
"── density · measured 7 · rendered 7
[2m0.14 |[22m         .--=+*###@@@@@@@@@@@@@@@@@@@@@@##**+==::.
[2m     |[22m    -=+#@                                        @##*=-:.
[2m     |[22m=*#@                                                     @#*+--:.
[2m     |[22m                                                                 @#*++=-:.
[2m0.00 |[22m
     [2m+--------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > density · full · 40 1`] = `
"── density · measured 7 · rendered 7
[38;2;98;98;98m0.14 │[39m    [38;2;230;159;0m⢀⠤⠖⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠒⠲⢤⣀[39m
[38;2;98;98;98m     │[39m [38;2;230;159;0m⢀⡰⠊⠁[39m                 [38;2;230;159;0m⠈⠑⠢⣀[39m
[38;2;98;98;98m     │[38;2;230;159;0m⠔⠉[39m                        [38;2;230;159;0m⠙⠲⠤⣀[39m
[38;2;98;98;98m     │[39m                              [38;2;230;159;0m⠉⠒⠤⣄[39m
[38;2;98;98;98m0.00 │[39m
     [38;2;98;98;98m└──────────────────────────────────[39m
"
`;

exports[`golden frames — every form > density · full · 80 1`] = `
"── density · measured 7 · rendered 7
[38;2;98;98;98m0.14 │[39m         [38;2;230;159;0m⢀⣀⠤⠤⠔⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠒⠢⠤⢄⣀⡀[39m
[38;2;98;98;98m     │[39m   [38;2;230;159;0m⢀⣀⠤⠒⠊⠉⠁[39m                                       [38;2;230;159;0m⠈⠉⠒⠒⠢⠤⣀⣀[39m
[38;2;98;98;98m     │[38;2;230;159;0m⠔⠒⠉⠁[39m                                                     [38;2;230;159;0m⠉⠑⠒⠒⠤⠤⣀⣀⡀[39m
[38;2;98;98;98m     │[39m                                                                 [38;2;230;159;0m⠈⠉⠑⠒⠒⠤⠤⠤⣀[39m
[38;2;98;98;98m0.00 │[39m
     [38;2;98;98;98m└──────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > density2d · ascii-1bit-wide · 40 1`] = `
"── density2d · measured 5 · rendered 5
[2mrow1 |[22m                             .=#=.
[2mrow2 |[22m                             :+@+:
[2mrow3 |[22m                             .:=:.

[2m.:-=+*#@  1 - 6[22m"
`;

exports[`golden frames — every form > density2d · ascii-1bit-wide · 80 1`] = `
"── density2d · measured 5 · rendered 5
[2mrow1 |[22m                                                                     .=#=.
[2mrow2 |[22m                                                                     :+@+:
[2mrow3 |[22m                                                                     .:=:.

[2m.:-=+*#@  1 - 6[22m"
`;

exports[`golden frames — every form > density2d · full · 40 1`] = `
"── density2d · measured 5 · rendered 5
[38;2;98;98;98mrow1 │[39m                             ⠄⠶⡿⠶⠄
[38;2;98;98;98mrow2 │[39m                             ⠔⠷⣿⠷⠔
[38;2;98;98;98mrow3 │[39m                             ⠄⠔⠶⠔⠄

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  1 - 6[39m"
`;

exports[`golden frames — every form > density2d · full · 80 1`] = `
"── density2d · measured 5 · rendered 5
[38;2;98;98;98mrow1 │[39m                                                                     ⠄⠶⡿⠶⠄
[38;2;98;98;98mrow2 │[39m                                                                     ⠔⠷⣿⠷⠔
[38;2;98;98;98mrow3 │[39m                                                                     ⠄⠔⠶⠔⠄

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  1 - 6[39m"
`;

exports[`golden frames — every form > dotplot · ascii-1bit-wide · 40 1`] = `
"── dotplot · measured 6 · rendered 6
[2ma |[22m*
[2mb |[22m                           *
[2mc |[22m         *
[2md |[22m                                    *
  [2m+-------------------------------------[22m
"
`;

exports[`golden frames — every form > dotplot · ascii-1bit-wide · 80 1`] = `
"── dotplot · measured 6 · rendered 6
[2ma |[22m*
[2mb |[22m                                                         *
[2mc |[22m                   *
[2md |[22m                                                                            *
  [2m+-----------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > dotplot · full · 40 1`] = `
"── dotplot · measured 6 · rendered 6
[38;2;98;98;98ma │[38;2;230;159;0m●                                    [39m
[38;2;98;98;98mb │[38;2;230;159;0m                           ●         [39m
[38;2;98;98;98mc │[38;2;230;159;0m         ●                           [39m
[38;2;98;98;98md │[38;2;230;159;0m                                    ●[39m
  [38;2;98;98;98m└─────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > dotplot · full · 80 1`] = `
"── dotplot · measured 6 · rendered 6
[38;2;98;98;98ma │[38;2;230;159;0m●                                                                            [39m
[38;2;98;98;98mb │[38;2;230;159;0m                                                         ●                   [39m
[38;2;98;98;98mc │[38;2;230;159;0m                   ●                                                         [39m
[38;2;98;98;98md │[38;2;230;159;0m                                                                            ●[39m
  [38;2;98;98;98m└─────────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > dumbbell · ascii-1bit-wide · 40 1`] = `
"── dumbbell · measured 5 · rendered 5
[2mX |[22m*----------------------------o
[2mY |[22m              *-------o
[2mZ |[22m       *----------------------------o
  [2m+-------------------------------------[22m
"
`;

exports[`golden frames — every form > dumbbell · ascii-1bit-wide · 80 1`] = `
"── dumbbell · measured 5 · rendered 5
[2mX |[22m*------------------------------------------------------------o
[2mY |[22m                              *---------------o
[2mZ |[22m               *------------------------------------------------------------o
  [2m+-----------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > dumbbell · full · 40 1`] = `
"── dumbbell · measured 5 · rendered 5
[38;2;98;98;98mX │[38;2;230;159;0m●────────────────────────────○       [39m
[38;2;98;98;98mY │[38;2;230;159;0m              ●───────○              [39m
[38;2;98;98;98mZ │[38;2;230;159;0m       ●────────────────────────────○[39m
  [38;2;98;98;98m└─────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > dumbbell · full · 80 1`] = `
"── dumbbell · measured 5 · rendered 5
[38;2;98;98;98mX │[38;2;230;159;0m●────────────────────────────────────────────────────────────○               [39m
[38;2;98;98;98mY │[38;2;230;159;0m                              ●───────────────○                              [39m
[38;2;98;98;98mZ │[38;2;230;159;0m               ●────────────────────────────────────────────────────────────○[39m
  [38;2;98;98;98m└─────────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > ecdf · ascii-1bit-wide · 40 1`] = `
"── ecdf · measured 7 · rendered 7
[2m1.0 |[22m                             -----@
[2m    |[22m                   .....*****@
[2m0.5 |[22m               ====@
[2m    |[22m     -----@@@@@@
[2m0.0 |[22m*****@
    [2m+-----------------------------------[22m
"
`;

exports[`golden frames — every form > ecdf · ascii-1bit-wide · 80 1`] = `
"── ecdf · measured 7 · rendered 7
[2m1.0 |[22m                                                               -----------@
[2m    |[22m                                          ...........**********@
[2m0.5 |[22m                                ==========@
[2m    |[22m           ----------@@@@@@@@@@@@
[2m0.0 |[22m***********@
    [2m+---------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > ecdf · full · 40 1`] = `
"── ecdf · measured 7 · rendered 7
[38;2;98;98;98m1.0 │[39m                             [38;2;230;159;0m⢠⠤⠤⠤⠤⠼[39m
[38;2;98;98;98m    │[39m                   [38;2;230;159;0m⢀⣀⣀⣀⣀⣰⠒⠒⠒⠒⠚[39m
[38;2;98;98;98m0.5 │[39m               [38;2;230;159;0m⡤⠤⠤⠤⠼[39m
[38;2;98;98;98m    │[39m     [38;2;230;159;0m⡤⠤⠤⠤⠤⠏⠉⠉⠉⠉⠁[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠒⠒⠒⠒⠒⠃[39m
    [38;2;98;98;98m└───────────────────────────────────[39m
"
`;

exports[`golden frames — every form > ecdf · full · 80 1`] = `
"── ecdf · measured 7 · rendered 7
[38;2;98;98;98m1.0 │[39m                                                                [38;2;230;159;0m⡤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠼[39m
[38;2;98;98;98m    │[39m                                          [38;2;230;159;0m⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡖⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠃[39m
[38;2;98;98;98m0.5 │[39m                                [38;2;230;159;0m⡤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠼[39m
[38;2;98;98;98m    │[39m          [38;2;230;159;0m⢠⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠼⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠁[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚[39m
    [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > flame · ascii-1bit-wide · 40 1`] = `
"── flame · measured 6 · rendered 6
[2m  main |[22m################################
[2m parse |[22m################................
[2mrender |[22m########........................
[2m paint |[22m................................
       [2m+--------------------------------[22m
"
`;

exports[`golden frames — every form > flame · ascii-1bit-wide · 80 1`] = `
"── flame · measured 6 · rendered 6
[2m  main |[22m########################################################################
[2m parse |[22m####################################....................................
[2mrender |[22m##################......................................................
[2m paint |[22m........................................................................
       [2m+------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > flame · full · 40 1`] = `
"── flame · measured 6 · rendered 6
[38;2;98;98;98m  main │[38;2;230;159;0m████████████████████████████████[39m
[38;2;98;98;98m parse │[38;2;230;159;0m████████████████░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98mrender │[38;2;230;159;0m████████░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98m paint │[38;2;230;159;0m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
       [38;2;98;98;98m└────────────────────────────────[39m
"
`;

exports[`golden frames — every form > flame · full · 80 1`] = `
"── flame · measured 6 · rendered 6
[38;2;98;98;98m  main │[38;2;230;159;0m████████████████████████████████████████████████████████████████████████[39m
[38;2;98;98;98m parse │[38;2;230;159;0m████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98mrender │[38;2;230;159;0m██████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98m paint │[38;2;230;159;0m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
       [38;2;98;98;98m└────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > forest · ascii-1bit-wide · 40 1`] = `
"── forest · measured 5 · rendered 5
[2mStudy 1 |[22m     [=========*=========]
[2mStudy 2 |[22m          [=========*=========]
[2mStudy 3 |[22m[=========*=========]
        [2m+-------------------------------[22m
"
`;

exports[`golden frames — every form > forest · ascii-1bit-wide · 80 1`] = `
"── forest · measured 5 · rendered 5
[2mStudy 1 |[22m            [======================*======================]
[2mStudy 2 |[22m                       [=======================*======================]
[2mStudy 3 |[22m[======================*=======================]
        [2m+-----------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > forest · full · 40 1`] = `
"── forest · measured 5 · rendered 5
[38;2;98;98;98mStudy 1 │[38;2;230;159;0m     [▌▌▌▌▌▌▌▌▌●▌▌▌▌▌▌▌▌▌]     [39m
[38;2;98;98;98mStudy 2 │[38;2;230;159;0m          [▌▌▌▌▌▌▌▌▌●▌▌▌▌▌▌▌▌▌][39m
[38;2;98;98;98mStudy 3 │[38;2;230;159;0m[▌▌▌▌▌▌▌▌▌●▌▌▌▌▌▌▌▌▌]          [39m
        [38;2;98;98;98m└───────────────────────────────[39m
"
`;

exports[`golden frames — every form > forest · full · 80 1`] = `
"── forest · measured 5 · rendered 5
[38;2;98;98;98mStudy 1 │[38;2;230;159;0m            [▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌●▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌]            [39m
[38;2;98;98;98mStudy 2 │[38;2;230;159;0m                       [▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌●▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌][39m
[38;2;98;98;98mStudy 3 │[38;2;230;159;0m[▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌●▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌▌]                       [39m
        [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > funnel · ascii-1bit-wide · 40 1`] = `
"── funnel · measured 6 · rendered 6
[2m  Visit |[22m###############################
[2mSign up |[22m         ############
[2m  Trial |[22m            ######
[2m    Pay |[22m              ##
        [2m+-------------------------------[22m
"
`;

exports[`golden frames — every form > funnel · ascii-1bit-wide · 80 1`] = `
"── funnel · measured 6 · rendered 6
[2m  Visit |[22m#######################################################################
[2mSign up |[22m                     ############################
[2m  Trial |[22m                            ##############
[2m    Pay |[22m                                ######
        [2m+-----------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > funnel · full · 40 1`] = `
"── funnel · measured 6 · rendered 6
[38;2;98;98;98m  Visit │[38;2;230;159;0m███████████████████████████████[39m
[38;2;98;98;98mSign up │[38;2;230;159;0m         ████████████          [39m
[38;2;98;98;98m  Trial │[38;2;230;159;0m            ██████             [39m
[38;2;98;98;98m    Pay │[38;2;230;159;0m              ██               [39m
        [38;2;98;98;98m└───────────────────────────────[39m
"
`;

exports[`golden frames — every form > funnel · full · 80 1`] = `
"── funnel · measured 6 · rendered 6
[38;2;98;98;98m  Visit │[38;2;230;159;0m███████████████████████████████████████████████████████████████████████[39m
[38;2;98;98;98mSign up │[38;2;230;159;0m                     ████████████████████████████                      [39m
[38;2;98;98;98m  Trial │[38;2;230;159;0m                            ██████████████                             [39m
[38;2;98;98;98m    Pay │[38;2;230;159;0m                                ██████                                 [39m
        [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > gantt · ascii-1bit-wide · 40 1`] = `
"── gantt · measured 5 · rendered 5
[2m Build |[22m#################
[2m  Test |[22m                ##########
[2mDeploy |[22m                         #######
       [2m+--------------------------------[22m
"
`;

exports[`golden frames — every form > gantt · ascii-1bit-wide · 80 1`] = `
"── gantt · measured 5 · rendered 5
[2m Build |[22m#####################################
[2m  Test |[22m                                    ######################
[2mDeploy |[22m                                                         ###############
       [2m+------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > gantt · full · 40 1`] = `
"── gantt · measured 5 · rendered 5
[38;2;98;98;98m Build │[38;2;230;159;0m█████████████████               [39m
[38;2;98;98;98m  Test │[38;2;230;159;0m                ██████████      [39m
[38;2;98;98;98mDeploy │[38;2;230;159;0m                         ███████[39m
       [38;2;98;98;98m└────────────────────────────────[39m
"
`;

exports[`golden frames — every form > gantt · full · 80 1`] = `
"── gantt · measured 5 · rendered 5
[38;2;98;98;98m Build │[38;2;230;159;0m█████████████████████████████████████                                   [39m
[38;2;98;98;98m  Test │[38;2;230;159;0m                                    ██████████████████████              [39m
[38;2;98;98;98mDeploy │[38;2;230;159;0m                                                         ███████████████[39m
       [38;2;98;98;98m└────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > heatmap · ascii-1bit-wide · 40 1`] = `
"── heatmap · measured 5 · rendered 5
[2ma |[22m                                 .-*@
[2mb |[22m                                 @*-.
[2mc |[22m                                 --**

[2m.:-=+*#@  1 - 4[22m"
`;

exports[`golden frames — every form > heatmap · ascii-1bit-wide · 80 1`] = `
"── heatmap · measured 5 · rendered 5
[2ma |[22m                                                                         .-*@
[2mb |[22m                                                                         @*-.
[2mc |[22m                                                                         --**

[2m.:-=+*#@  1 - 4[22m"
`;

exports[`golden frames — every form > heatmap · full · 40 1`] = `
"── heatmap · measured 5 · rendered 5
[38;2;98;98;98ma │[39m                                 ⠄⠖⠿⣿
[38;2;98;98;98mb │[39m                                 ⣿⠿⠖⠄
[38;2;98;98;98mc │[39m                                 ⠖⠖⠿⠿

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  1 - 4[39m"
`;

exports[`golden frames — every form > heatmap · full · 80 1`] = `
"── heatmap · measured 5 · rendered 5
[38;2;98;98;98ma │[39m                                                                         ⠄⠖⠿⣿
[38;2;98;98;98mb │[39m                                                                         ⣿⠿⠖⠄
[38;2;98;98;98mc │[39m                                                                         ⠖⠖⠿⠿

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  1 - 4[39m"
`;

exports[`golden frames — every form > histogram · ascii-1bit-wide · 40 1`] = `
"── histogram · measured 7 · rendered 7
[2m  1 |[22m#################................ 2
[2m1.8 |[22m#########################........ 3
[2m2.6 |[22m#################................ 2
[2m3.4 |[22m########......................... 1
[2m4.2 |[22m################################# 4
    [2m+-----------------------------------[22m
"
`;

exports[`golden frames — every form > histogram · ascii-1bit-wide · 80 1`] = `
"── histogram · measured 7 · rendered 7
[2m  1 |[22m#####################################.................................... 2
[2m1.8 |[22m#######################################################.................. 3
[2m2.6 |[22m#####################################.................................... 2
[2m3.4 |[22m##################....................................................... 1
[2m4.2 |[22m######################################################################### 4
    [2m+---------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > histogram · full · 40 1`] = `
"── histogram · measured 7 · rendered 7
[38;2;98;98;98m  1 │[38;2;230;159;0m█████████████████░░░░░░░░░░░░░░░░ 2[39m
[38;2;98;98;98m1.8 │[38;2;230;159;0m█████████████████████████░░░░░░░░ 3[39m
[38;2;98;98;98m2.6 │[38;2;230;159;0m█████████████████░░░░░░░░░░░░░░░░ 2[39m
[38;2;98;98;98m3.4 │[38;2;230;159;0m████████░░░░░░░░░░░░░░░░░░░░░░░░░ 1[39m
[38;2;98;98;98m4.2 │[38;2;230;159;0m█████████████████████████████████ 4[39m
    [38;2;98;98;98m└───────────────────────────────────[39m
"
`;

exports[`golden frames — every form > histogram · full · 80 1`] = `
"── histogram · measured 7 · rendered 7
[38;2;98;98;98m  1 │[38;2;230;159;0m█████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 2[39m
[38;2;98;98;98m1.8 │[38;2;230;159;0m███████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░ 3[39m
[38;2;98;98;98m2.6 │[38;2;230;159;0m█████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 2[39m
[38;2;98;98;98m3.4 │[38;2;230;159;0m██████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 1[39m
[38;2;98;98;98m4.2 │[38;2;230;159;0m█████████████████████████████████████████████████████████████████████████ 4[39m
    [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > horizon · ascii-1bit-wide · 40 1`] = `
"── horizon · measured 3 · rendered 3
    -@
   +@@@.
 =#@@@@@="
`;

exports[`golden frames — every form > horizon · ascii-1bit-wide · 80 1`] = `
"── horizon · measured 3 · rendered 3
    -@
   +@@@.
 =#@@@@@="
`;

exports[`golden frames — every form > horizon · full · 40 1`] = `
"── horizon · measured 3 · rendered 3
    ⠖⣿
   ⠷⣿⣿⣿⠄
 ⠶⡿⣿⣿⣿⣿⣿⠶"
`;

exports[`golden frames — every form > horizon · full · 80 1`] = `
"── horizon · measured 3 · rendered 3
    ⠖⣿
   ⠷⣿⣿⣿⠄
 ⠶⡿⣿⣿⣿⣿⣿⠶"
`;

exports[`golden frames — every form > icicle · ascii-1bit-wide · 40 1`] = `
"── icicle · measured 6 · rendered 6
[2m paint |[22m................................
[2mrender |[22m########........................
[2m parse |[22m################................
[2m  main |[22m################################
       [2m+--------------------------------[22m
"
`;

exports[`golden frames — every form > icicle · ascii-1bit-wide · 80 1`] = `
"── icicle · measured 6 · rendered 6
[2m paint |[22m........................................................................
[2mrender |[22m##################......................................................
[2m parse |[22m####################################....................................
[2m  main |[22m########################################################################
       [2m+------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > icicle · full · 40 1`] = `
"── icicle · measured 6 · rendered 6
[38;2;98;98;98m paint │[38;2;230;159;0m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98mrender │[38;2;230;159;0m████████░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98m parse │[38;2;230;159;0m████████████████░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98m  main │[38;2;230;159;0m████████████████████████████████[39m
       [38;2;98;98;98m└────────────────────────────────[39m
"
`;

exports[`golden frames — every form > icicle · full · 80 1`] = `
"── icicle · measured 6 · rendered 6
[38;2;98;98;98m paint │[38;2;230;159;0m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98mrender │[38;2;230;159;0m██████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98m parse │[38;2;230;159;0m████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[39m
[38;2;98;98;98m  main │[38;2;230;159;0m████████████████████████████████████████████████████████████████████████[39m
       [38;2;98;98;98m└────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > latency · ascii-1bit-wide · 40 1`] = `
"── latency · measured 6 · rendered 6
[2mp50 |[22m                           ....:...
[2mp90 |[22m                           .::::::.
[2mp99 |[22m                           :-:==-::
[2mmax |[22m                           =+=#@+==

[2m.:-=+*#@  10 - 250[22m"
`;

exports[`golden frames — every form > latency · ascii-1bit-wide · 80 1`] = `
"── latency · measured 6 · rendered 6
[2mp50 |[22m                                                                   ....:...
[2mp90 |[22m                                                                   .::::::.
[2mp99 |[22m                                                                   :-:==-::
[2mmax |[22m                                                                   =+=#@+==

[2m.:-=+*#@  10 - 250[22m"
`;

exports[`golden frames — every form > latency · full · 40 1`] = `
"── latency · measured 6 · rendered 6
[38;2;98;98;98mp50 │[39m                           ⠄⠄⠄⠄⠔⠄⠄⠄
[38;2;98;98;98mp90 │[39m                           ⠄⠔⠔⠔⠔⠔⠔⠄
[38;2;98;98;98mp99 │[39m                           ⠔⠖⠔⠶⠶⠖⠔⠔
[38;2;98;98;98mmax │[39m                           ⠶⠷⠶⡿⣿⠷⠶⠶

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  10 - 250[39m"
`;

exports[`golden frames — every form > latency · full · 80 1`] = `
"── latency · measured 6 · rendered 6
[38;2;98;98;98mp50 │[39m                                                                   ⠄⠄⠄⠄⠔⠄⠄⠄
[38;2;98;98;98mp90 │[39m                                                                   ⠄⠔⠔⠔⠔⠔⠔⠄
[38;2;98;98;98mp99 │[39m                                                                   ⠔⠖⠔⠶⠶⠖⠔⠔
[38;2;98;98;98mmax │[39m                                                                   ⠶⠷⠶⡿⣿⠷⠶⠶

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  10 - 250[39m"
`;

exports[`golden frames — every form > line · ascii-1bit-wide · 40 1`] = `
"── line · measured 7 · rendered 7
[2m7.5 |[22m                          :.
[2m    |[22m                      :=*@  @##*+=-
[2m    |[22m       .-=--:.    .-+@
[2m    |[22m .:=+*@       @@##@
[2m0.0 |[22m#@
    [2m+-----------------------------------[22m
"
`;

exports[`golden frames — every form > line · ascii-1bit-wide · 80 1`] = `
"── line · measured 7 · rendered 7
[2m7.5 |[22m                                                       .::..
[2m    |[22m                                               .:-=+*#@     @@@###**+++==--
[2m    |[22m              ..:--==---:::...          .:-=+*@
[2m    |[22m   .::-==+*##@                @@@###**#@
[2m0.0 |[22m#@@
    [2m+---------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > line · full · 40 1`] = `
"── line · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                          [38;2;230;159;0m⣀⡀[39m
[38;2;98;98;98m    │[39m                      [38;2;230;159;0m⢀⡠⠒⠉[39m [38;2;230;159;0m⠈⠉⠉⠑⠒⠒⠢⠤[39m
[38;2;98;98;98m    │[39m      [38;2;230;159;0m⢀⣀⠤⠤⢄⣀⣀⡀[39m     [38;2;230;159;0m⣀⠔⠊⠁[39m
[38;2;98;98;98m    │[39m [38;2;230;159;0m⣀⡠⠤⠒⠉⠁[39m      [38;2;230;159;0m⠈⠉⠉⠑⠒⠉[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠉[39m
    [38;2;98;98;98m└───────────────────────────────────[39m
"
`;

exports[`golden frames — every form > line · full · 80 1`] = `
"── line · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                                                       [38;2;230;159;0m⢀⣀⣀⣀⡀[39m
[38;2;98;98;98m    │[39m                                                [38;2;230;159;0m⣀⣀⠤⠔⠒⠊⠉⠁[39m   [38;2;230;159;0m⠈⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠢⠤⠤⠤[39m
[38;2;98;98;98m    │[39m              [38;2;230;159;0m⣀⣀⣀⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⡀[39m           [38;2;230;159;0m⢀⣀⡠⠤⠒⠒⠉⠉[39m
[38;2;98;98;98m    │[39m  [38;2;230;159;0m⣀⣀⣀⠤⠤⠤⠒⠒⠒⠉⠉⠉[39m              [38;2;230;159;0m⠈⠉⠉⠉⠉⠉⠑⠒⠒⠒⠊⠉⠁[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠉⠉[39m
    [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > lollipop · ascii-1bit-wide · 40 1`] = `
"── lollipop · measured 6 · rendered 6
[2ma |[22m*
[2mb |[22m---------------------------*
[2mc |[22m---------*
[2md |[22m------------------------------------*
  [2m+-------------------------------------[22m
"
`;

exports[`golden frames — every form > lollipop · ascii-1bit-wide · 80 1`] = `
"── lollipop · measured 6 · rendered 6
[2ma |[22m*
[2mb |[22m---------------------------------------------------------*
[2mc |[22m-------------------*
[2md |[22m----------------------------------------------------------------------------*
  [2m+-----------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > lollipop · full · 40 1`] = `
"── lollipop · measured 6 · rendered 6
[38;2;98;98;98ma │[38;2;230;159;0m●                                    [39m
[38;2;98;98;98mb │[38;2;230;159;0m───────────────────────────●         [39m
[38;2;98;98;98mc │[38;2;230;159;0m─────────●                           [39m
[38;2;98;98;98md │[38;2;230;159;0m────────────────────────────────────●[39m
  [38;2;98;98;98m└─────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > lollipop · full · 80 1`] = `
"── lollipop · measured 6 · rendered 6
[38;2;98;98;98ma │[38;2;230;159;0m●                                                                            [39m
[38;2;98;98;98mb │[38;2;230;159;0m─────────────────────────────────────────────────────────●                   [39m
[38;2;98;98;98mc │[38;2;230;159;0m───────────────────●                                                         [39m
[38;2;98;98;98md │[38;2;230;159;0m────────────────────────────────────────────────────────────────────────────●[39m
  [38;2;98;98;98m└─────────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > pairplot · ascii-1bit-wide · 40 1`] = `
"── pairplot · measured 7 · rendered 7
[2m3 |[22m        @
[2m  |[22m
[2m2 |[22m                =
[2m  |[22m
[2m1 |[22m.
  [2m+-----------------[22m  [2m+-----[22m
"
`;

exports[`golden frames — every form > pairplot · ascii-1bit-wide · 80 1`] = `
"── pairplot · measured 7 · rendered 7
[2m3 |[22m                  @                  [2m4 |[22m
[2m  |[22m                                     [2m  |[22m*
[2m2 |[22m                                    =[2m2 |[22m
[2m  |[22m                                     [2m  |[22m
[2m1 |[22m.                                    [2m0 |[22m
  [2m+-------------------------------------[22m  [2m+-------------------------[22m
"
`;

exports[`golden frames — every form > pairplot · full · 40 1`] = `
"── pairplot · measured 7 · rendered 7
[38;2;98;98;98m3 │[39m
[38;2;98;98;98m  │[39m
[38;2;98;98;98m2 │[39m
[38;2;98;98;98m  │[39m
[38;2;98;98;98m1 │[39m
  [38;2;98;98;98m└─────────────────[39m
"
`;

exports[`golden frames — every form > pairplot · full · 80 1`] = `
"── pairplot · measured 7 · rendered 7
[38;2;98;98;98m3 │[39m                  [38;2;230;159;0m⠈[39m
[38;2;98;98;98m  │[39m
[38;2;98;98;98m2 │[39m
[38;2;98;98;98m  │[39m
[38;2;98;98;98m1 │[38;2;230;159;0m⡀[39m
  [38;2;98;98;98m└─────────────────────────────────────[39m  [38;2;98;98;98m└─[39m
"
`;

exports[`golden frames — every form > pie · ascii-1bit-wide · 40 1`] = `
"── pie · measured 8 · rendered 10
##########
##########
##########
##########
##########
##########
##########
##########
##########
##########"
`;

exports[`golden frames — every form > pie · ascii-1bit-wide · 80 1`] = `
"── pie · measured 8 · rendered 10
##########
##########
##########
##########
##########
##########
##########
##########
##########
##########"
`;

exports[`golden frames — every form > pie · full · 40 1`] = `
"── pie · measured 8 · rendered 8
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⠤⠖⠒⡖⠒⠤⢄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡤⠋⠈⢢⠀⠀⡇⠀⠀⠀⠈⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡜⠀⠀⠀⠀⢣⠀⡇⠀⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⠉⠉⠒⠤⠤⣀⡱⡇⠀⠀⠀⠀⠀⠀⢱⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⡠⠞⠁⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢇⠀⡠⠔⠋⠀⠀⠀⠀⠀⠀⠀⠀⢀⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠮⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠒⠤⢄⣀⣀⣀⠤⠔⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
`;

exports[`golden frames — every form > pie · full · 80 1`] = `
"── pie · measured 8 · rendered 8
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⠤⠖⠒⡖⠒⠤⢄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡤⠋⠈⢢⠀⠀⡇⠀⠀⠀⠈⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡜⠀⠀⠀⠀⢣⠀⡇⠀⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⠉⠉⠒⠤⠤⣀⡱⡇⠀⠀⠀⠀⠀⠀⢱⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⡠⠞⠁⠀⠀⠀⠀⠀⠀⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢇⠀⡠⠔⠋⠀⠀⠀⠀⠀⠀⠀⠀⢀⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠮⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠒⠤⢄⣀⣀⣀⠤⠔⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
`;

exports[`golden frames — every form > radar · ascii-1bit-wide · 40 1`] = `
"── radar · measured 8 · rendered 5
Speed: 80
Power: 60
Range: 90
Defence: 40
HP: 70"
`;

exports[`golden frames — every form > radar · ascii-1bit-wide · 80 1`] = `
"── radar · measured 8 · rendered 5
Speed: 80
Power: 60
Range: 90
Defence: 40
HP: 70"
`;

exports[`golden frames — every form > radar · full · 40 1`] = `
"── radar · measured 8 · rendered 8
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠤⠐⠂⡆⠒⠠⠄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⢀⠤⠋⡏⠢⡀⠀⠈⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡔⠀⣠⠒⠉⠀⠀⡇⠀⠈⠢⡀⠀⠐⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠰⠈⠉⠶⡤⠤⣀⡀⡇⣀⡠⠤⠜⡎⠉⠰⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢨⠀⠀⠀⠱⣀⠀⡼⠹⡄⠀⠀⠀⡇⠀⢨⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠆⠀⠀⠀⢨⠮⢄⡀⠈⢦⠀⢰⠁⠀⠆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⡀⡠⠃⠀⠀⠈⠑⠤⣣⣸⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠐⠤⢀⡀⡀⣀⠠⠄⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
`;

exports[`golden frames — every form > radar · full · 80 1`] = `
"── radar · measured 8 · rendered 8
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠤⠐⠂⡆⠒⠠⠄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⢀⠤⠋⡏⠢⡀⠀⠈⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡔⠀⣠⠒⠉⠀⠀⡇⠀⠈⠢⡀⠀⠐⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠰⠈⠉⠶⡤⠤⣀⡀⡇⣀⡠⠤⠜⡎⠉⠰⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢨⠀⠀⠀⠱⣀⠀⡼⠹⡄⠀⠀⠀⡇⠀⢨⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠆⠀⠀⠀⢨⠮⢄⡀⠈⢦⠀⢰⠁⠀⠆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⡀⡠⠃⠀⠀⠈⠑⠤⣣⣸⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠐⠤⢀⡀⡀⣀⠠⠄⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
`;

exports[`golden frames — every form > ridgeline · ascii-1bit-wide · 40 1`] = `
"── ridgeline · measured 5 · rendered 5
[2mset1 |[22m+++****#####@@@@@@@@###***+++===--
[2mset2 |[22m--==++***###@@@@@@@##***+++====---
[2mset3 |[22m=++**###@@@@@@@#####**********++++
     [2m+----------------------------------[22m
"
`;

exports[`golden frames — every form > ridgeline · ascii-1bit-wide · 80 1`] = `
"── ridgeline · measured 5 · rendered 5
[2mset1 |[22m++++++*********###########@@@@@@@@@@@@@@@@@@#######******++++++=======----
[2mset2 |[22m---=====+++++******######@@@@@@@@@@@@@@@@######*****+++++++========-------
[2mset3 |[22m=+++++****######@@@@@@@@@@@@@@@@@##########************************+++++++
     [2m+--------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > ridgeline · full · 40 1`] = `
"── ridgeline · measured 5 · rendered 5
[38;2;98;98;98mset1 │[38;2;230;159;0m⠒⠒⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠒⠢⠤⠤⠤⠤[39m
[38;2;98;98;98mset2 │[38;2;230;159;0m⠤⠤⠤⠤⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠢⠤⠤⠤⠤⠤⠤[39m
[38;2;98;98;98mset3 │[38;2;230;159;0m⠤⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒[39m
     [38;2;98;98;98m└──────────────────────────────────[39m
"
`;

exports[`golden frames — every form > ridgeline · full · 80 1`] = `
"── ridgeline · measured 5 · rendered 5
[38;2;98;98;98mset1 │[38;2;230;159;0m⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠢⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤[39m
[38;2;98;98;98mset2 │[38;2;230;159;0m⠤⠤⠤⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠢⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤[39m
[38;2;98;98;98mset3 │[38;2;230;159;0m⠤⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒[39m
     [38;2;98;98;98m└──────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > scatter · ascii-1bit-wide · 40 1`] = `
"── scatter · measured 7 · rendered 7
[2m7.5 |[22m                          :
[2m    |[22m                                  -
[2m    |[22m         =
[2m    |[22m                 *
[2m0.0 |[22m#
    [2m+-----------------------------------[22m
"
`;

exports[`golden frames — every form > scatter · ascii-1bit-wide · 80 1`] = `
"── scatter · measured 7 · rendered 7
[2m7.5 |[22m                                                        :
[2m    |[22m                                                                          -
[2m    |[22m                   =
[2m    |[22m                                     *
[2m0.0 |[22m#
    [2m+---------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > scatter · full · 40 1`] = `
"── scatter · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                          [38;2;230;159;0m⡀[39m
[38;2;98;98;98m    │[39m                                  [38;2;230;159;0m⠠[39m
[38;2;98;98;98m    │[39m        [38;2;230;159;0m⠠[39m
[38;2;98;98;98m    │[39m                 [38;2;230;159;0m⠐[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠁[39m
    [38;2;98;98;98m└───────────────────────────────────[39m
"
`;

exports[`golden frames — every form > scatter · full · 80 1`] = `
"── scatter · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                                                        [38;2;230;159;0m⡀[39m
[38;2;98;98;98m    │[39m                                                                          [38;2;230;159;0m⠠[39m
[38;2;98;98;98m    │[39m                  [38;2;230;159;0m⠠[39m
[38;2;98;98;98m    │[39m                                     [38;2;230;159;0m⠐[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠁[39m
    [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > smallmultiples · ascii-1bit-wide · 40 1`] = `
"── smallmultiples · measured 7 · rendered 7
[2m3 |[22m       +@*=.
[2m  |[22m     -@    @#=:
[2m2 |[22m   :*@        @#+
[2m  |[22m  +@
[2m1 |[22m-@
  [2m+-----------------[22m  [2m+-----[22m
"
`;

exports[`golden frames — every form > smallmultiples · ascii-1bit-wide · 80 1`] = `
"── smallmultiples · measured 7 · rendered 7
[2m3 |[22m               :=*@#*+=:.            [2m4 |[22m
[2m  |[22m           .=*@          @#*+=-:     [2m  |[22m*+=-:
[2m2 |[22m       .-+#@                    @#*+=[2m2 |[22m
[2m  |[22m    :=#@                             [2m  |[22m
[2m1 |[22m:=*@                                 [2m0 |[22m
  [2m+-------------------------------------[22m  [2m+-------------------------[22m
"
`;

exports[`golden frames — every form > smallmultiples · full · 40 1`] = `
"── smallmultiples · measured 7 · rendered 7
[38;2;98;98;98m3 │[39m
[38;2;98;98;98m  │[39m
[38;2;98;98;98m2 │[39m
[38;2;98;98;98m  │[39m
[38;2;98;98;98m1 │[39m
  [38;2;98;98;98m└─────────────────[39m
"
`;

exports[`golden frames — every form > smallmultiples · full · 80 1`] = `
"── smallmultiples · measured 7 · rendered 7
[38;2;98;98;98m3 │[39m               [38;2;230;159;0m⢀⡠⠔⠊⠑[39m
[38;2;98;98;98m  │[39m           [38;2;230;159;0m⢀⡠⠔⠊⠁[39m
[38;2;98;98;98m2 │[39m       [38;2;230;159;0m⢀⡠⠔⠊⠁[39m
[38;2;98;98;98m  │[39m   [38;2;230;159;0m⢀⡠⠔⠊⠁[39m
[38;2;98;98;98m1 │[38;2;230;159;0m⡠⠔⠊⠁[39m
  [38;2;98;98;98m└─────────────────────────────────────[39m  [38;2;98;98;98m└─[39m
"
`;

exports[`golden frames — every form > sparkline · ascii-1bit-wide · 40 1`] = `
"── sparkline · measured 1 · rendered 1
                                   .+-@*"
`;

exports[`golden frames — every form > sparkline · ascii-1bit-wide · 80 1`] = `
"── sparkline · measured 1 · rendered 1
                                                                           .+-@*"
`;

exports[`golden frames — every form > sparkline · full · 40 1`] = `
"── sparkline · measured 1 · rendered 1
[38;2;230;159;0m                                   ▁▅▃█▆[39m"
`;

exports[`golden frames — every form > sparkline · full · 80 1`] = `
"── sparkline · measured 1 · rendered 1
[38;2;230;159;0m                                                                           ▁▅▃█▆[39m"
`;

exports[`golden frames — every form > spectrogram · ascii-1bit-wide · 40 1`] = `
"── spectrogram · measured 6 · rendered 6
[2m100Hz |[22m                         :-=++*#@
[2m200Hz |[22m                         @#*++=-:
[2m400Hz |[22m                         -+*@*+-.
[2m800Hz |[22m                         ++++++++

[2m.:-=+*#@  0 - 8[22m"
`;

exports[`golden frames — every form > spectrogram · ascii-1bit-wide · 80 1`] = `
"── spectrogram · measured 6 · rendered 6
[2m100Hz |[22m                                                                 :-=++*#@
[2m200Hz |[22m                                                                 @#*++=-:
[2m400Hz |[22m                                                                 -+*@*+-.
[2m800Hz |[22m                                                                 ++++++++

[2m.:-=+*#@  0 - 8[22m"
`;

exports[`golden frames — every form > spectrogram · full · 40 1`] = `
"── spectrogram · measured 6 · rendered 6
[38;2;98;98;98m100Hz │[39m                         ⠔⠖⠶⠷⠷⠿⡿⣿
[38;2;98;98;98m200Hz │[39m                         ⣿⡿⠿⠷⠷⠶⠖⠔
[38;2;98;98;98m400Hz │[39m                         ⠖⠷⠿⣿⠿⠷⠖⠄
[38;2;98;98;98m800Hz │[39m                         ⠷⠷⠷⠷⠷⠷⠷⠷

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  0 - 8[39m"
`;

exports[`golden frames — every form > spectrogram · full · 80 1`] = `
"── spectrogram · measured 6 · rendered 6
[38;2;98;98;98m100Hz │[39m                                                                 ⠔⠖⠶⠷⠷⠿⡿⣿
[38;2;98;98;98m200Hz │[39m                                                                 ⣿⡿⠿⠷⠷⠶⠖⠔
[38;2;98;98;98m400Hz │[39m                                                                 ⠖⠷⠿⣿⠿⠷⠖⠄
[38;2;98;98;98m800Hz │[39m                                                                 ⠷⠷⠷⠷⠷⠷⠷⠷

[38;2;98;98;98m⠄⠔⠖⠶⠷⠿⡿⣿  0 - 8[39m"
`;

exports[`golden frames — every form > step · ascii-1bit-wide · 40 1`] = `
"── step · measured 7 · rendered 7
[2m7.5 |[22m                          :::::::::
[2m    |[22m                          @       @
[2m    |[22m         =========        @
[2m    |[22m         @       @********@
[2m0.0 |[22m#########@
    [2m+-----------------------------------[22m
"
`;

exports[`golden frames — every form > step · ascii-1bit-wide · 80 1`] = `
"── step · measured 7 · rendered 7
[2m7.5 |[22m                                                        :::::::::::::::::::
[2m    |[22m                                                        @                 @
[2m    |[22m                   ===================                  @
[2m    |[22m                   @                 @******************@
[2m0.0 |[22m###################@
    [2m+---------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > step · full · 40 1`] = `
"── step · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                          [38;2;230;159;0m⣀⣀⣀⣀⣀⣀⣀⣀⣀[39m
[38;2;98;98;98m    │[39m                          [38;2;230;159;0m⡇[39m       [38;2;230;159;0m⠸[39m
[38;2;98;98;98m    │[39m        [38;2;230;159;0m⢠⠤⠤⠤⠤⠤⠤⠤⠤⢤[39m        [38;2;230;159;0m⡇[39m
[38;2;98;98;98m    │[39m        [38;2;230;159;0m⢸[39m        [38;2;230;159;0m⠘⠒⠒⠒⠒⠒⠒⠒⠒⠃[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠉⠉⠉⠉⠉⠉⠉⠉⠉[39m
    [38;2;98;98;98m└───────────────────────────────────[39m
"
`;

exports[`golden frames — every form > step · full · 80 1`] = `
"── step · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                                                        [38;2;230;159;0m⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀[39m
[38;2;98;98;98m    │[39m                                                        [38;2;230;159;0m⡇[39m                 [38;2;230;159;0m⠸[39m
[38;2;98;98;98m    │[39m                  [38;2;230;159;0m⢠⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⢤[39m                  [38;2;230;159;0m⡇[39m
[38;2;98;98;98m    │[39m                  [38;2;230;159;0m⢸[39m                  [38;2;230;159;0m⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠃[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉[39m
    [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > streamgraph · ascii-1bit-wide · 40 1`] = `
"── streamgraph · measured 7 · rendered 7
[2m |[22m                        .-+#@##*++=--:
[2m |[22m       :-==--::..   .-+#@
[2m |[22m.:=+*#@          @@#@
[2m |[22m                .:-==--::..  .:-==+*#@
[2m |[22m++==--::..:-=+#@           @@
 [2m+--------------------------------------[22m
"
`;

exports[`golden frames — every form > streamgraph · ascii-1bit-wide · 80 1`] = `
"── streamgraph · measured 7 · rendered 7
[2m |[22m                                                  .:-==+*#@@###***++++===---::
[2m |[22m             ..::--===----::::....       .:--=+*#@
[2m |[22m.::--==+**##@                     @@@@##@
[2m |[22m                                 ..::--===-----::::.....    ..::---==+++**##@@
[2m |[22m+++=====----:::::...::--==++**#@@                       @@@@
 [2m+------------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > streamgraph · full · 40 1`] = `
"── streamgraph · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                          [38;2;230;159;0m⣀⡀[39m      [38;2;86;180;233m⣀[39m
[38;2;98;98;98m    │[39m                [38;2;86;180;233m⢀⡠⠤⣀⣀[39m [38;2;230;159;0m⢀⡠⠒⠉[39m [38;2;230;159;0m⠈⠉⠉⠑⠒⠒⠢⠤[39m
[38;2;98;98;98m    │[39m      [38;2;230;159;0m⢀⣀⠤⠤⢄⣀⣀⡀[38;2;86;180;233m⠔⠊⠁[39m  [38;2;230;159;0m⣀⠔⠊⠁[38;2;86;180;233m⠒⠒⠤⠤⠒⠉⠁[39m
[38;2;98;98;98m    │[38;2;86;180;233m⠒[38;2;230;159;0m⣀⡠⠤⠒⠉⠁[38;2;86;180;233m⡀[39m [38;2;86;180;233m⣀⠤⠒⠉[38;2;230;159;0m⠈⠉⠉⠑⠒⠉[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠉[39m      [38;2;86;180;233m⠈⠉[39m
    [38;2;98;98;98m└───────────────────────────────────[39m
"
`;

exports[`golden frames — every form > streamgraph · full · 80 1`] = `
"── streamgraph · measured 7 · rendered 7
[38;2;98;98;98m7.5 │[39m                                                       [38;2;230;159;0m⢀⣀⣀⣀⡀[39m             [38;2;86;180;233m⢀⣀[39m
[38;2;98;98;98m    │[39m                                   [38;2;86;180;233m⣀⣀⠤⠤⠤⣀⣀⣀⣀⡀[39m   [38;2;230;159;0m⣀⣀⠤⠔⠒⠊⠉⠁[39m   [38;2;230;159;0m⠈⠉⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠢⠤⠤⠤[39m
[38;2;98;98;98m    │[39m              [38;2;230;159;0m⣀⣀⣀⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⡀[38;2;86;180;233m⠤⠤⠒⠒⠉⠉[39m     [38;2;230;159;0m⢀⣀⡠⠤⠒⠒⠉⠉[38;2;86;180;233m⠉⠑⠒⠒⠒⠒⠤⠤⠤⠔⠒⠒⠉⠉⠉[39m
[38;2;98;98;98m    │[38;2;86;180;233m⠒⠒[38;2;230;159;0m⣀⣀⣀⠤⠤⠤⠒⠒⠒⠉⠉⠉[38;2;86;180;233m⣀⡀[39m   [38;2;86;180;233m⢀⣀⡠⠤⠔⠒⠊⠉⠁[38;2;230;159;0m⠈⠉⠉⠉⠉⠉⠑⠒⠒⠒⠊⠉⠁[39m
[38;2;98;98;98m0.0 │[38;2;230;159;0m⠉⠉[39m             [38;2;86;180;233m⠈⠉⠉⠉⠁[39m
    [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > violin · ascii-1bit-wide · 40 1`] = `
"── violin · measured 5 · rendered 5
[2mA |[22m###############################
[2mB |[22m    #########################
[2mC |[22m ####################################
  [2m+-------------------------------------[22m
"
`;

exports[`golden frames — every form > violin · ascii-1bit-wide · 80 1`] = `
"── violin · measured 5 · rendered 5
[2mA |[22m##################################################################
[2mB |[22m         ####################################################
[2mC |[22m ############################################################################
  [2m+-----------------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > violin · full · 40 1`] = `
"── violin · measured 5 · rendered 5
[38;2;98;98;98mA │[38;2;230;159;0m███████████████████████████████      [39m
[38;2;98;98;98mB │[38;2;86;180;233m    █████████████████████████        [39m
[38;2;98;98;98mC │[38;2;60;191;154m ████████████████████████████████████[39m
  [38;2;98;98;98m└─────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > violin · full · 80 1`] = `
"── violin · measured 5 · rendered 5
[38;2;98;98;98mA │[38;2;230;159;0m██████████████████████████████████████████████████████████████████           [39m
[38;2;98;98;98mB │[38;2;86;180;233m         ████████████████████████████████████████████████████                [39m
[38;2;98;98;98mC │[38;2;60;191;154m ████████████████████████████████████████████████████████████████████████████[39m
  [38;2;98;98;98m└─────────────────────────────────────────────────────────────────────────────[39m
"
`;

exports[`golden frames — every form > waffle · ascii-1bit-wide · 40 1`] = `
"── waffle · measured 10 · rendered 10
##########
##########
##########
##########
##########
##########
##########
##########
##########
##########"
`;

exports[`golden frames — every form > waffle · ascii-1bit-wide · 80 1`] = `
"── waffle · measured 10 · rendered 10
##########
##########
##########
##########
##########
##########
##########
##########
##########
##########"
`;

exports[`golden frames — every form > waffle · full · 40 1`] = `
"── waffle · measured 10 · rendered 10
██████████
██████████
██████████
██████████
██████████
██████████
██████████
██████████
██████████
██████████"
`;

exports[`golden frames — every form > waffle · full · 80 1`] = `
"── waffle · measured 10 · rendered 10
██████████
██████████
██████████
██████████
██████████
██████████
██████████
██████████
██████████
██████████"
`;

exports[`golden frames — every form > waterfall · ascii-1bit-wide · 40 1`] = `
"── waterfall · measured 7 · rendered 7
[2mRevenue |[22m###############################
[2m   COGS |[22m                  #############
[2m   Opex |[22m           ########
[2m    Tax |[22m        ####
[2m    Net |[22m#########
        [2m+-------------------------------[22m
"
`;

exports[`golden frames — every form > waterfall · ascii-1bit-wide · 80 1`] = `
"── waterfall · measured 7 · rendered 7
[2mRevenue |[22m#######################################################################
[2m   COGS |[22m                                          #############################
[2m   Opex |[22m                         ##################
[2m    Tax |[22m                  ########
[2m    Net |[22m###################
        [2m+-----------------------------------------------------------------------[22m
"
`;

exports[`golden frames — every form > waterfall · full · 40 1`] = `
"── waterfall · measured 7 · rendered 7
[38;2;98;98;98mRevenue │[38;2;230;159;0m███████████████████████████████[39m
[38;2;98;98;98m   COGS │[38;2;230;159;0m                  █████████████[39m
[38;2;98;98;98m   Opex │[38;2;230;159;0m           ████████            [39m
[38;2;98;98;98m    Tax │[38;2;230;159;0m        ████                   [39m
[38;2;98;98;98m    Net │[38;2;230;159;0m█████████                      [39m
        [38;2;98;98;98m└───────────────────────────────[39m
"
`;

exports[`golden frames — every form > waterfall · full · 80 1`] = `
"── waterfall · measured 7 · rendered 7
[38;2;98;98;98mRevenue │[38;2;230;159;0m███████████████████████████████████████████████████████████████████████[39m
[38;2;98;98;98m   COGS │[38;2;230;159;0m                                          █████████████████████████████[39m
[38;2;98;98;98m   Opex │[38;2;230;159;0m                         ██████████████████                            [39m
[38;2;98;98;98m    Tax │[38;2;230;159;0m                  ████████                                             [39m
[38;2;98;98;98m    Net │[38;2;230;159;0m███████████████████                                                    [39m
        [38;2;98;98;98m└───────────────────────────────────────────────────────────────────────[39m
"
`;
